syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.proto";
option java_outer_classname = "ApolloProto";
option objc_class_prefix = "Ap";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package apollo;

service Messaging {
    /*
     * Messaging 3 phase gossip
     */
    rpc gossip (MessageBff) returns (Messages) {}
    rpc update (Push) returns (google.protobuf.Empty) {}
}

message MessageBff {
    string context = 1; 
    int32 ring = 3;
    bytes digests = 4;
}

message Push {
    string context = 1;
    int32 ring = 2;
    repeated  Message updates = 3;
}

message Message {
    string source = 1;
    int32 sequenceNumber = 2;
    int32 age = 3;
    int32 channel = 4;
    string signature = 5;
    string key = 6;
    google.protobuf.Any content = 7;
}

message ByteMessage {
    bytes contents = 1;
}

message Messages {
    bytes bff = 1;
    repeated  Message updates = 2;
}

service Avalanche {
    /**
     * Avalanche query
     */
    rpc query (Query) returns (QueryResult) {}
    
    /**
     * parent gossip
     */
    rpc requestDag ( DagNodes ) returns (SuppliedDagNodes) {}
}

service Ghost {

    /*
     * Ghost API
     */
    rpc get ( Get ) returns (DagEntry) {}
    rpc put ( ADagEntry ) returns (google.protobuf.Empty) {}

    /**
     * Ghost interval gossip
     */
    rpc intervals (Intervals) returns (DagEntries) {} 
}

message DagNodes {
    string context = 1;
    repeated string entries = 2;
}

message SuppliedDagNodes {
    string context = 1;
    repeated bytes entries = 2;
}

message DagEntries {
    string context = 1;
    repeated DagEntry entries = 2;
} 

message ADagEntry {
    string context = 1;
    DagEntry entry = 2;
}

message Intervals {
    string context = 1;
    repeated Interval intervals = 2;
    repeated bytes have = 3;
}

message Query {
    string context = 1;
    repeated string hashes = 2;
    repeated bytes transactions = 3;
    repeated string wanted = 4;
}

message Get {
    string context = 1;
    string id = 2;
}

message DagEntry {
    enum EntryType {
        INVALID = 0;
        GENSIS = 1; 
        NO_OP = 2;
        USER = 3;
    } 
    EntryType description = 1;
    repeated string links = 2;
    google.protobuf.Any data = 3;
}

message Interval {
        string start = 1;
        string end = 2;
    }

message QueryResult {
    enum Vote {
        TRUE = 0;
        FALSE = 1;
        UNKNOWN = 2; 
    } 
    repeated Vote result = 1;
    repeated bytes wanted = 2;
}
